// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AccountPasswordForm /> should render properly 1`] = `
.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-3 {
  padding-top: 8px;
}

.emotion-0 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-2 {
  position: relative;
}

.emotion-1 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-1:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-1:focus {
  color: #000000;
  background-color: #ffffff;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-17 button,
.emotion-17 a {
  margin-right: 16px;
}

.emotion-15 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-15:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-15[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-15,
.emotion-15:hover,
.emotion-15:visited {
  background-color: #808080;
}

.emotion-15:hover {
  background-color: #b3b3b3;
}

.emotion-15[aria-disabled=true] {
  background-color: #808080;
}

.emotion-16 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-16:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-16[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-16,
.emotion-16:hover,
.emotion-16:visited {
  background-color: #73b61c;
}

.emotion-16:hover {
  background-color: #96c955;
}

.emotion-16[aria-disabled=true] {
  background-color: #808080;
}

.emotion-24 {
  padding-top: 16px;
  padding-left: 48px;
}

.emotion-23 {
  width: 470px;
  border: 1px solid #3b3b3b;
  border-radius: 2px;
  padding: 32px;
}

.emotion-19 {
  color: #ffffff;
  font-weight: 500;
  padding-bottom: 4px;
}

.emotion-20 {
  color: #808080;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
}

.emotion-21 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px 16px;
}

.emotion-21:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-21[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-21,
.emotion-21:hover,
.emotion-21:visited {
  background-color: #73b61c;
}

.emotion-21:hover {
  background-color: #96c955;
}

.emotion-21[aria-disabled=true] {
  background-color: #808080;
}

<div
  className="emotion-25"
>
  <form
    action=""
    className="emotion-18"
    method="post"
    onSubmit={[Function]}
  >
    <div
      className="emotion-3"
    >
      <label
        className="emotion-0"
        htmlFor="currentPassword"
      >
        Current Password
      </label>
      <div
        className="emotion-2"
      >
        <input
          autoFocus={true}
          className="emotion-1"
          disabled={false}
          id="currentPassword"
          name="currentPassword"
          onChange={[Function]}
          type="password"
          value=""
        />
      </div>
      <div
        className="emotion-3"
      >
         
      </div>
    </div>
    <div
      className="emotion-3"
    >
      <label
        className="emotion-0"
        htmlFor="newPassword"
      >
        New Password
      </label>
      <div
        className="emotion-2"
      >
        <input
          className="emotion-1"
          disabled={false}
          id="newPassword"
          name="newPassword"
          onChange={[Function]}
          type="password"
          value=""
        />
      </div>
      <div
        className="emotion-3"
      >
         
      </div>
    </div>
    <div
      className="emotion-3"
    >
      <label
        className="emotion-0"
        htmlFor="confirmPassword"
      >
        Confirm Password
      </label>
      <div
        className="emotion-2"
      >
        <input
          className="emotion-1"
          disabled={false}
          id="confirmPassword"
          name="confirmPassword"
          onChange={[Function]}
          type="password"
          value=""
        />
      </div>
      <div
        className="emotion-3"
      >
         
      </div>
    </div>
    <div
      className="emotion-17"
    >
      <button
        className="emotion-15"
        onClick={[Function]}
        type="button"
      >
        Cancel
      </button>
      <button
        aria-disabled={true}
        className="emotion-16"
        onClick={[Function]}
        type="submit"
      >
        Save
      </button>
    </div>
  </form>
  <div
    className="emotion-24"
  >
    
    <div
      className="emotion-23"
    >
      <div
        className="emotion-19"
      >
        Did you sign in with Google or another service?
      </div>
      <div
        className="emotion-20"
      >
        If so, you may not have a Zorroa password. You can create one by resetting the password and checking your email for instructions.
      </div>
      <div
        className="emotion-17"
      >
        <button
          className="emotion-21"
          onClick={[Function]}
          type="button"
        >
          Reset Password
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AccountPasswordForm /> should render properly 2`] = `
.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-4 button,
.emotion-4 a {
  margin-right: 16px;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-3,
.emotion-3:hover,
.emotion-3:visited {
  background-color: #73b61c;
}

.emotion-3:hover {
  background-color: #96c955;
}

.emotion-3[aria-disabled=true] {
  background-color: #808080;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #d7f2de;
  border-radius: 2px;
  padding: 12px;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #000000;
  font-weight: 500;
}

<div>
  <div
    className="emotion-2"
  >
    <div
      className="emotion-1"
    >
      <svg
        color="#4ac565"
        data-file-name="checkmark.svg"
        height={20}
      />
      <div
        className="emotion-0"
        role="alert"
      >
        New Password Saved
      </div>
    </div>
  </div>
  <div
    className="emotion-4"
  >
    <button
      className="emotion-3"
      onClick={[Function]}
      type="button"
    >
      Edit Password Again
    </button>
  </div>
</div>
`;

exports[`<AccountPasswordForm /> should render properly 3`] = `
.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-3 {
  padding-top: 8px;
}

.emotion-0 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-2 {
  position: relative;
}

.emotion-1 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-1:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-1:focus {
  color: #000000;
  background-color: #ffffff;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-17 button,
.emotion-17 a {
  margin-right: 16px;
}

.emotion-15 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-15:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-15[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-15,
.emotion-15:hover,
.emotion-15:visited {
  background-color: #808080;
}

.emotion-15:hover {
  background-color: #b3b3b3;
}

.emotion-15[aria-disabled=true] {
  background-color: #808080;
}

.emotion-16 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-16:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-16[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-16,
.emotion-16:hover,
.emotion-16:visited {
  background-color: #73b61c;
}

.emotion-16:hover {
  background-color: #96c955;
}

.emotion-16[aria-disabled=true] {
  background-color: #808080;
}

.emotion-24 {
  padding-top: 16px;
  padding-left: 48px;
}

.emotion-23 {
  width: 470px;
  border: 1px solid #3b3b3b;
  border-radius: 2px;
  padding: 32px;
}

.emotion-19 {
  color: #ffffff;
  font-weight: 500;
  padding-bottom: 4px;
}

.emotion-20 {
  color: #808080;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
}

.emotion-21 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px 16px;
}

.emotion-21:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-21[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-21,
.emotion-21:hover,
.emotion-21:visited {
  background-color: #73b61c;
}

.emotion-21:hover {
  background-color: #96c955;
}

.emotion-21[aria-disabled=true] {
  background-color: #808080;
}

<div
  className="emotion-25"
>
  <form
    action=""
    className="emotion-18"
    method="post"
    onSubmit={[Function]}
  >
    <div
      className="emotion-3"
    >
      <label
        className="emotion-0"
        htmlFor="currentPassword"
      >
        Current Password
      </label>
      <div
        className="emotion-2"
      >
        <input
          autoFocus={true}
          className="emotion-1"
          disabled={false}
          id="currentPassword"
          name="currentPassword"
          onChange={[Function]}
          type="password"
          value=""
        />
      </div>
      <div
        className="emotion-3"
      >
         
      </div>
    </div>
    <div
      className="emotion-3"
    >
      <label
        className="emotion-0"
        htmlFor="newPassword"
      >
        New Password
      </label>
      <div
        className="emotion-2"
      >
        <input
          className="emotion-1"
          disabled={false}
          id="newPassword"
          name="newPassword"
          onChange={[Function]}
          type="password"
          value=""
        />
      </div>
      <div
        className="emotion-3"
      >
         
      </div>
    </div>
    <div
      className="emotion-3"
    >
      <label
        className="emotion-0"
        htmlFor="confirmPassword"
      >
        Confirm Password
      </label>
      <div
        className="emotion-2"
      >
        <input
          className="emotion-1"
          disabled={false}
          id="confirmPassword"
          name="confirmPassword"
          onChange={[Function]}
          type="password"
          value=""
        />
      </div>
      <div
        className="emotion-3"
      >
         
      </div>
    </div>
    <div
      className="emotion-17"
    >
      <button
        className="emotion-15"
        onClick={[Function]}
        type="button"
      >
        Cancel
      </button>
      <button
        aria-disabled={true}
        className="emotion-16"
        onClick={[Function]}
        type="submit"
      >
        Save
      </button>
    </div>
  </form>
  <div
    className="emotion-24"
  >
    
    <div
      className="emotion-23"
    >
      <div
        className="emotion-19"
      >
        Did you sign in with Google or another service?
      </div>
      <div
        className="emotion-20"
      >
        If so, you may not have a Zorroa password. You can create one by resetting the password and checking your email for instructions.
      </div>
      <div
        className="emotion-17"
      >
        <button
          className="emotion-21"
          onClick={[Function]}
          type="button"
        >
          Reset Password
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AccountPasswordForm /> should render properly when a user cancels 1`] = `
.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-3 {
  padding-top: 8px;
}

.emotion-0 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-2 {
  position: relative;
}

.emotion-1 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-1:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-1:focus {
  color: #000000;
  background-color: #ffffff;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-17 button,
.emotion-17 a {
  margin-right: 16px;
}

.emotion-15 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-15:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-15[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-15,
.emotion-15:hover,
.emotion-15:visited {
  background-color: #808080;
}

.emotion-15:hover {
  background-color: #b3b3b3;
}

.emotion-15[aria-disabled=true] {
  background-color: #808080;
}

.emotion-16 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-16:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-16[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-16,
.emotion-16:hover,
.emotion-16:visited {
  background-color: #73b61c;
}

.emotion-16:hover {
  background-color: #96c955;
}

.emotion-16[aria-disabled=true] {
  background-color: #808080;
}

.emotion-24 {
  padding-top: 16px;
  padding-left: 48px;
}

.emotion-23 {
  width: 470px;
  border: 1px solid #3b3b3b;
  border-radius: 2px;
  padding: 32px;
}

.emotion-19 {
  color: #ffffff;
  font-weight: 500;
  padding-bottom: 4px;
}

.emotion-20 {
  color: #808080;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
}

.emotion-21 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px 16px;
}

.emotion-21:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-21[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-21,
.emotion-21:hover,
.emotion-21:visited {
  background-color: #73b61c;
}

.emotion-21:hover {
  background-color: #96c955;
}

.emotion-21[aria-disabled=true] {
  background-color: #808080;
}

<div
  className="emotion-25"
>
  <form
    action=""
    className="emotion-18"
    method="post"
    onSubmit={[Function]}
  >
    <div
      className="emotion-3"
    >
      <label
        className="emotion-0"
        htmlFor="currentPassword"
      >
        Current Password
      </label>
      <div
        className="emotion-2"
      >
        <input
          autoFocus={true}
          className="emotion-1"
          disabled={false}
          id="currentPassword"
          name="currentPassword"
          onChange={[Function]}
          type="password"
          value=""
        />
      </div>
      <div
        className="emotion-3"
      >
         
      </div>
    </div>
    <div
      className="emotion-3"
    >
      <label
        className="emotion-0"
        htmlFor="newPassword"
      >
        New Password
      </label>
      <div
        className="emotion-2"
      >
        <input
          className="emotion-1"
          disabled={false}
          id="newPassword"
          name="newPassword"
          onChange={[Function]}
          type="password"
          value=""
        />
      </div>
      <div
        className="emotion-3"
      >
         
      </div>
    </div>
    <div
      className="emotion-3"
    >
      <label
        className="emotion-0"
        htmlFor="confirmPassword"
      >
        Confirm Password
      </label>
      <div
        className="emotion-2"
      >
        <input
          className="emotion-1"
          disabled={false}
          id="confirmPassword"
          name="confirmPassword"
          onChange={[Function]}
          type="password"
          value=""
        />
      </div>
      <div
        className="emotion-3"
      >
         
      </div>
    </div>
    <div
      className="emotion-17"
    >
      <button
        className="emotion-15"
        onClick={[Function]}
        type="button"
      >
        Cancel
      </button>
      <button
        aria-disabled={true}
        className="emotion-16"
        onClick={[Function]}
        type="submit"
      >
        Save
      </button>
    </div>
  </form>
  <div
    className="emotion-24"
  >
    
    <div
      className="emotion-23"
    >
      <div
        className="emotion-19"
      >
        Did you sign in with Google or another service?
      </div>
      <div
        className="emotion-20"
      >
        If so, you may not have a Zorroa password. You can create one by resetting the password and checking your email for instructions.
      </div>
      <div
        className="emotion-17"
      >
        <button
          className="emotion-21"
          onClick={[Function]}
          type="button"
        >
          Reset Password
        </button>
      </div>
    </div>
  </div>
</div>
`;
